@@ -1,5 +1,12 @@
 2007-10-15  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-icon-container.c:
+        * libnautilus-private/nautilus-icon-factory.h:
+	Remove NAUTILUS_ICON_SIZE_THUMBNAIL define as this is
+	really dynamic.
+
+2007-10-15  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.c:
 	Actually handle thumbnail size prefs
 	
